--- a/2020-01-21 Song Genres/Song-Genres-Anna-Henschel.Rmd
+++ b/2020-01-21 Song Genres/Song-Genres-Anna-Henschel.Rmd
@@ -1,7 +1,11 @@
 ---
 title: "2020-01-21 Song Genres"
 author: Anna Henschel
-output: github_document
+output: 
+  github_document:
+    fig_width: 9
+    fig_height: 5
+    dev: jpeg
 ---
 
 ```{r setup, include=FALSE}
@@ -64,4 +68,6 @@ ggplot(aes(x = track_popularity, y = track_name, colour = track_name, label = tr
 ```
 
 
-Post that helped me figure out how to reorder factor levels with the {forcats} package: https://www.r-graph-gallery.com/267-reorder-a-variable-in-ggplot2.html 
+Post that helped me figure out how to reorder factor levels with the {forcats} package: https://www.r-graph-gallery.com/267-reorder-a-variable-in-ggplot2.html  
+
+Other things I learned is that RMarkdown lets me knit to "github document", which "generates [a] GitHub compatible markdown (.md) files which are subsequently rendered to HTML when viewed on GitHub". More here: https://rmarkdown.rstudio.com/github_document_format.html  
