--- a/Bechdel Data/Bechdel-data-code.Rmd
+++ b/Bechdel Data/Bechdel-data-code.Rmd
@@ -3,7 +3,7 @@ title: "FiveThirtyEight Bechdel Data"
 author: Anna Henschel
 output: 
   github_document:
-    fig_width: 10
+    fig_width: 12
     fig_height: 6
 ---
 
@@ -17,32 +17,51 @@ Inspired by the following vignette by Chester Ismay: https://fivethirtyeight-r.n
 
 Load libraries
 ```{r, message=FALSE, warning=FALSE}
-library(fivethirtyeight) # Bechdel data from fivethirtyeight 
-library(ggsci) # color palettes with a lot of flexibility
-library(ggthemes) # pretty ggplot themes
-library(janitor) # aggregate frequencies of factors
-library(knitr) # make nice tables
+# Bechdel data from fivethirtyeight 
+library(fivethirtyeight)
+# color palettes with a lot of flexibility
+library(ggsci)
+# pretty ggplot themes
+library(ggthemes)
+# more pretty ggplot themes
+library(hrbrthemes)
+# get more fonts
+library(extrafont)
+# aggregate frequencies of factors
+library(janitor)
+# variety of methods for reshaping data prior to analysis
 library(reshape2)
-library(tidyverse) # tidy data wrangling
-
+ # tidy data wrangling
+library(tidyverse)
 # Turn off scientific notation
 options(scipen = 99)
 ```
 
 Load data
 ```{r}
-data(bechdel) # get data included in the fivethirtyeight package
+# get data included in the fivethirtyeight package
+data(bechdel) 
+
+# peak at data
 glimpse(bechdel)
 ```
 
 How many movies pass and fail overall vs. over time?
 ```{r}
 # Find out the overall percentage
-perc_bechdel <- bechdel %>%
+overall_perc_bechdel <- bechdel %>%
   filter(between(year, 1990, 2013)) %>%
   tabyl(binary)
 
-kable(perc_bechdel)
+perc_decade_bechdel <- bechdel %>%
+  filter(between(year, 1990, 2013)) %>%
+  tabyl(binary, decade_code) %>%
+  reshape::melt(id="binary") %>%
+  rename(Decade = variable, 
+         Count = value) %>%
+  group_by(Decade) %>%
+  mutate(Percentage = Count/sum(Count))
+
 
 # See how this develops over years:
 perc_bechdel_time <- bechdel %>%
@@ -53,7 +72,7 @@ perc_bechdel_time <- bechdel %>%
 
 A small majority of movies fails the bechdel test:
 ```{r}
-perc_bechdel %>%
+overall_perc_bechdel %>%
   ggplot(aes(x = binary, y = percent, fill = binary)) + 
   geom_bar(stat = "identity") + 
   scale_y_continuous(labels=scales::percent, limits = c(0,.7), breaks = c(0, .1, .2, .3, .4, .5, .6)) +
@@ -69,6 +88,31 @@ perc_bechdel %>%
          caption = 'Data by FiveThirtyEight\n #BechdelTest • @AnnaHenschel') 
 ```
 
+What does it look like by decade?
+```{r}
+decade_names <- c(
+                    `1` = "2010 - 2013",
+                    `2` = "2000 - 2009",
+                    `3` = "1990 - 1999")
+
+perc_decade_bechdel %>%
+  ggplot(aes(x = binary, y = Percentage, fill = binary)) + 
+  geom_bar(stat = "identity") + 
+  scale_y_continuous(labels=scales::percent, limits = c(0,.7)) +
+  coord_flip() +
+  theme_fivethirtyeight() +
+  scale_fill_d3() +
+  facet_wrap(~ Decade, 
+             labeller = as_labeller(decade_names)) +
+  theme(legend.position = "none", 
+        axis.text.x = element_text(size =14), 
+        axis.text.y = element_text(size =14)) +
+  labs(x = '', y = '',
+         title = 'Proportion of movies between 1990 and 2013 passing the Bechdel Test', 
+       subtitle = 'The test asks whether a work features at least two women who talk to each other about something other than a man.',
+         caption = 'Data by FiveThirtyEight\n #BechdelTest • @AnnaHenschel') 
+```
+It's a bit too early to tell with this data, as the last 7 years of the current decade are missing. But 2000 - 2009 is definitely an improvement to 1990 -1999.
 
 ```{r}
 # Find out what the top international grossing movie is in each of the Bechdel Test categories
@@ -102,7 +146,7 @@ bechdel %>%
   labs(x = '', y = '',
          title = 'Movies between 1990 and 2013 by Bechdel Test category', 
        subtitle = 'The test asks whether a work features at least two women who talk to each other about something other than a man.\nFor each category, an example of the highest international grossing movie is given.',
-         caption = 'Data by FiveThirtyEight\n #BechdelTest • @AnnaHenschel')
+         caption = 'Data by FiveThirtyEight\n #BechdelTest • @AnnaHenschel') 
 ```
 
 
@@ -121,3 +165,28 @@ ggplot(perc_bechdel_time,
        subtitle = 'The test asks whether a work features at least two women who talk to each other about something other than a man.',
          caption = 'Data by FiveThirtyEight\n #BechdelTest • @AnnaHenschel') 
 ```
+
+Does domestic and international gross correlate?
+```{r}
+bechdel$decade_code <- factor(bechdel$decade_code, labels=c("2010 - 2013", "2000 - 2009", "1990 - 1999"))
+
+import_roboto_condensed()
+
+bechdel %>%
+  filter(between(year, 1990, 2013)) %>%
+  ggplot(aes(x = domgross, y = intgross, colour = as_factor(decade_code))) + 
+  geom_jitter(alpha = .7, size = 4) +
+  scale_x_continuous(labels = scales::dollar_format(prefix="$")) +
+  scale_y_continuous(labels = scales::dollar_format(prefix="$")) +
+  hrbrthemes::theme_modern_rc() +
+  scale_color_startrek() +
+  theme(axis.text.x = element_text(size =16), 
+        axis.text.y = element_text(size =16)) +
+  labs(x = '', y = '',
+       colour = "By decade:", 
+         title = 'Domestic and international gross of movies between 1990 and 2013',
+       caption = 'Data by FiveThirtyEight\n #BechdelTest • @AnnaHenschel') 
+```
+
+Domestic gross and international gross for each movie seems highly correlated in each decade. 
+
