add code and plots for tbi data

--- a/2020-03-24 Traumatic Brain Injury/traumatic_brain_injury_code_tidy_tuesday.Rmd
+++ b/2020-03-24 Traumatic Brain Injury/traumatic_brain_injury_code_tidy_tuesday.Rmd
@@ -3,45 +3,142 @@ title: "Traumatic Brain Injury"
 author: Anna Henschel
 date: "2020-03-24"
 output: 
-  github_document:
-    fig_width: 10
-    fig_height: 5
-    dev: jpeg
+  github_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Submission for #TidyTuesday week 13 "Traumatic Brain Injury"
+#### Submission for #TidyTuesday week 13 "Traumatic Brain Injury" `r emo::ji("brain")`
+
+From the Tidy Tuesday [repo](https://github.com/rfordatascience/tidytuesday/tree/master/data/2020/2020-03-24):  
+
+"The goal of this week's #TidyTuesday is to spread awareness for just how common TBIs are - both in civilian and military populations. **One of every 60 people in the U.S. lives with a TBI related disability. Moderate and severe traumatic brain injury (TBI) can lead to a lifetime of physical, cognitive, emotional, and behavioral changes.**  
+
+If you want to share an infographic or summary graphic from this data - please consider using the awareness hashtag: #ChangeYourMind, #braininjuryawarenessmonth, or tagging the Brain Injury Association. More details can be found at the Brain Injury Association Website.  
+
+The data this week comes from the CDC and Veterans Brain Injury Center. Additional stats can be found at CDC.gov."  
 
 ```{r, message=FALSE, warning=FALSE}
 library(hrbrthemes)
 library(ggsci)
+library(scales)
 library(extrafont)
 library(patchwork)
+library(emo)
+library(Amelia)
 library(tidyverse)
+library(emoGG)
 ```
 
-# Load the data
+#### Load the data `r emo::ji("graph")`
+```{r, message=FALSE}
+# Get the Data
+tbi_age <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-03-24/tbi_age.csv')
+tbi_year <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-03-24/tbi_year.csv')
+tbi_military <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-03-24/tbi_military.csv')
+```
+
+Exploring the data a bit (missingness etc):
 ```{r}
+glimpse(tbi_age)
 
+mypal = pal_d3("category10")(5) # pick 5 colours from color palette
+scales::show_col(mypal)
+
+
+Amelia::missmap(tbi_age, 
+                col = c("#D62728FF", "#1F77B4FF"), 
+                main = "Missingness Map of tbi_age")
+Amelia::missmap(tbi_military, 
+                col = c("#D62728FF", "#1F77B4FF"), 
+                main = "Missingness Map of tbi_age")
+Amelia::missmap(tbi_year, 
+                col = c("#D62728FF", "#1F77B4FF"), 
+                main = "Missingness Map of tbi_age")
 ```
 
 
-Plot:
+#### Explore {emoGG} package `r emo::ji("smile")`
 ```{r}
-# ggplot(aes(x = domgross, y = intgross, colour = as_factor(decade_code))) + 
-#   geom_jitter(alpha = .7, size = 4) +
-#   scale_x_continuous(labels = scales::dollar_format(prefix="$")) +
-#   scale_y_continuous(labels = scales::dollar_format(prefix="$")) +
-#   hrbrthemes::theme_modern_rc() +
-#   scale_color_startrek() +
-#   theme(axis.text.x = element_text(size =16), 
-#         axis.text.y = element_text(size =16)) +
-#   labs(x = '', y = '',
-#        colour = "By decade:", 
-#          title = 'Traumatic Brain Injury',
-#        caption = 'Data by CDC • #braininjuryawarenessmonth • @AnnaHenschel') 
+# How does {emoGG} work?
+emoji_search("tulip")
+
+# Plot with geom_emoji
+ggplot(iris, aes(Sepal.Length, Sepal.Width, color = Species)) +
+  geom_emoji(emoji="1f337") 
+
+# Search codes for brain
+# emoji_search("brain")
+# emoji_search("bandage")
+# emoji_search("bulb")
+# emoji_search("baby")
+# emoji_search("woman")
+# emoji_search("old")
 ```
 
+Relevant emojis: `emo::ji("hospital")` = `r emo::ji("hospital")`, `emo::ji("ambulance")` = `r emo::ji("ambulance")`, `emo::ji("doctor")` = `r emo::ji("doctor")`  
+
+How to use {emoGG}:   
+https://blog.revolutionanalytics.com/2015/11/emojis-in-ggplot-graphics.html 
+
+
+#### Plot the TBI data `r emo::ji("metrics")`
+```{r, fig.width=11, fig.height=6}
+p1 <- tbi_age %>%
+  filter(age_group == "0-4") %>%
+  filter(type == "Emergency Department Visit") %>%
+ggplot(aes(number_est, reorder(injury_mechanism, -number_est))) +
+  geom_segment(aes(x = 0, y = reorder(injury_mechanism, -number_est), xend = number_est, yend = reorder(injury_mechanism, -number_est)), color = "red", size = 1) +
+  geom_emoji(emoji = "1f476", size = .08) +
+  scale_x_continuous(label=comma) +
+  hrbrthemes::theme_ipsum_rc(grid="XY") +
+  theme(axis.text.x = element_text(size =12),
+        axis.text.y = element_text(size =12)) +
+  labs(x = '',
+       y = '',
+       title = 'Traumatic Brain Injury emergency department visits (age group: 0-4)', 
+       caption = 'Data by CDC • #braininjuryawarenessmonth • @AnnaHenschel')
+
+p1
+```
+
+```{r, fig.width=11, fig.height=6}
+p2 <- tbi_age %>%
+  filter(age_group == "25-34") %>%
+  filter(type == "Emergency Department Visit") %>%
+ggplot(aes(number_est, reorder(injury_mechanism, -number_est))) +
+  geom_segment(aes(x = 0, y = reorder(injury_mechanism, -number_est), xend = number_est, yend = reorder(injury_mechanism, -number_est)), color = "red", size = 1) +
+  geom_emoji(emoji = "1f469", size = .08) +
+  scale_x_continuous(label=comma) +
+  hrbrthemes::theme_ipsum_rc(grid="XY") +
+  theme(axis.text.x = element_text(size =12),
+        axis.text.y = element_text(size =12)) +
+  labs(x = '',
+       y = '',
+       title = 'Traumatic Brain Injury emergency department visits (age group: 25-34)', 
+       caption = 'Data by CDC • #braininjuryawarenessmonth • @AnnaHenschel')
+p2
+```
+
+```{r, fig.width=11, fig.height=6}
+p3 <- tbi_age %>%
+  filter(age_group == "75+") %>%
+  filter(type == "Emergency Department Visit") %>%
+ggplot(aes(number_est, reorder(injury_mechanism, -number_est))) +
+   geom_segment(aes(x = 0, y = reorder(injury_mechanism, -number_est), xend = number_est, yend = reorder(injury_mechanism, -number_est)), color = "red", size = 1) +
+  geom_emoji(emoji = "1f475", size = .08) +
+  scale_x_continuous(label=comma) +
+  hrbrthemes::theme_ipsum_rc(grid="XY") +
+  theme(axis.text.x = element_text(size =12),
+        axis.text.y = element_text(size =12)) +
+  labs(x = '',
+       y = '',
+       title = 'Traumatic Brain Injury emergency department visits (age group: 75+)', 
+       caption = 'Data by CDC • #braininjuryawarenessmonth • @AnnaHenschel')
+p3
+```
+
+
+`r emo::ji("bulb")`Remember to tag: @biaamerica when sharing infographic!  
